# paper-2-plugin-adc25

./: CMakeLists.txt  LICENSE  README.md  Toys.html  resources.md  solutions.md
notebooks/: ComplexNumbersRefresher.ipynb  FilterComparison.ipynb  Filters.ipynb  GettingStarted.ipynb  Playground.ipynb  requirements.txt
notebooks/filter_design_analysis/: analysis.py  filter.py  signal.py
plugin/: MVMFilterPlugin.jucer
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
profiling/: CMakeLists.txt  Profiling.cpp
source/: CMakeLists.txt  MVMFilter.cpp  MVMFilter.h
tests/: CMakeLists.txt  TestTools.h  Tests.cpp  runTests.py
